--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div id="container">
         <canvas id="game" width="500px" height="700px"></canvas>
         <button id="start-btn">START</button>
-        <h1 id="notes-display">Notes hitted: 0</h1>
+        <h1 id="combo">Combo: 0</h1>
+        <h1 id="score">Score: 0</h1>
     </div>
 
     <script src="/js/constant.js"></script>
