notes completed, visual clarity added, fire animation TODO

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <script src="/js/constant.js"></script>
     <script src="/js/background.js"></script>
+    <script src="/js/fret.js"></script>
     <script src="/js/note.js"></script>
     <script src="/song/barracuda.js"></script>
     <script src="/js/player.js"></script>
