--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 id="title">Dani's Guitar Hero</h1>
-    <p>Instructions: The player must hit the highest amount of notes to achieve a higher score using <span>A´s key </span>
+    <p><b>INSTRUCTIONS</b>: The player must hit the highest amount of notes to achieve a higher score using "ASDJK" keys. A = <span id="green">GREEN</span>, S = <span id="red">RED</span>, D = <span id="yellow">YELLOW</span>, J = <span id="blue">BLUE</span> and K = <span id="orange">ORANGE</span>
     </p>
     <button id="start-btn">START</button>
     <div id="container">
