restar button label

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 id="higheststreak"></h1>
         <h1 id="notemissed"></h1>
         <h1 id="percent"></h1>
-        <button id="restart-btn">START</button>
+        <button id="restart-btn">RESTART</button>
     </div>
 
     <script src="./js/constant.js"></script>
